# aml-graph

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml
backend/: README.md  pyproject.toml  ruff.toml
backend/docs/: diploma_backend.md
backend/src/: app.py  logging.py  main.py  settings.py  task_worker.py
backend/src/api/: __init__.py
backend/src/api/endpoints/v1/: __init__.py  algorithms.py  entity_types.py  health.py  processing_info.py  sessions.py  stream.py  upload.py
backend/src/api/middlewares/: cors.py
backend/src/di/: container.py
backend/src/di/providers/: database.py  graph.py  repositories.py  services.py  sessions.py  use_cases.py
backend/src/graph/: builder.py  detectors.py  ibm.py  layout.py  scoring.py  serialization.py
backend/src/infrastructure/database/ladybug/: base.py  repository.py
backend/src/infrastructure/database/postgres/: core.py  repository.py  types.py
backend/src/infrastructure/storage/: base.py  csv_store.py  graph_artifacts.py  redis_artifacts.py
backend/src/infrastructure/task_processing/: broker.py  setup.py
backend/src/infrastructure/task_queue/: broker.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: b1de7453b950_init_jobs_table.py  c3d4e5f6a7b8_add_clustering_job_statuses.py
backend/src/ml/: gnn_baseline.py  gnn_dataset.py
backend/src/modules/graph/: schemas.py  types.py
backend/src/modules/graph/analytics/: adaptive_strategy.py  behavioral_classifier.py  clustering.py  detectors.py  features.py  scoring.py
backend/src/modules/graph/parsing/: entity_classifier.py  ibm.py
backend/src/modules/graph/repositories/: graph.py
backend/src/modules/graph/services/: builder.py  hierarchical_layout.py  (+2 more)
backend/src/modules/jobs/: enums.py  models.py  schemas.py
backend/src/shared/: dto.py  enums.py  helpers.py  schemas.py
backend/src/tasks/: __init__.py  build_graph.py  cluster_graph_task.py  detect_patterns.py  hierarchical_layout_task.py  save_graph.py  score_and_layout.py  select_strategy_task.py
backend/src/usecases/: stream_graph.py  upload_graph.py
backend/tests/: conftest.py  test_detectors.py  test_gnn_dataset.py  test_graph_api.py  test_graph_builder.py  test_health.py  test_ibm_parser.py  test_layout_payload.py  test_scoring.py  test_stream.py  test_upload.py  test_upload_ibm.py
(+36 files in other folders)
